# charabia

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  bors.toml  words.txt
.github/: release-draft-template.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/scripts/: check-release.sh
.github/workflows/: publish.yml  push_benchmarks.yml  release-drafter.yml  rust.yml  update-cargo-toml-version.yml  update-kvariants.yml
benches/: bench.rs  default_run.rs  initialization.rs  normalizer.rs  tokenizer.rs
charabia/: Cargo.toml  README.md  icu4x-khmer-keys
charabia/benches/: bench.rs
charabia/dictionaries/chinese_company_names/: words.txt
charabia/dictionaries/fst/german/: words.fst
charabia/dictionaries/fst/khmer/: words.fst
charabia/dictionaries/txt/german/: dictionary-de.txt  words.txt
charabia/src/: classifier.rs  lib.rs  separators.rs  token.rs  tokenizer.rs
charabia/src/detection/: chars.rs  mod.rs  script_language.rs
charabia/src/normalizer/: ae_oe_normalizer.rs  ae_oe_normalizer.rs.rs  arabic.rs  character_converter.rs  chinese.rs  cjk.rs  classify.rs  compatibility_decomposition.rs  control_char.rs  dummy_example.rs  greek.rs  japanese.rs  lowercase.rs  mod.rs  nonspacing_mark.rs  persian.rs  quote.rs  russian.rs  swedish_recomposition.rs  turkish.rs  vietnamese.rs
charabia/src/normalizer/chinese/: kvariants.rs
charabia/src/segmenter/: arabic.rs  camel_case.rs  chinese.rs  dummy_example.rs  german.rs  japanese.rs  khmer.rs  korean.rs  latin.rs  mod.rs  persian.rs  thai.rs  utils.rs
charabia/src/segmenter/latin/: camel_case.rs  mod.rs  snake_case.rs
cli/: Cargo.toml
cli/src/: main.rs
dictionaries/fst/thai/: words.fst
dictionaries/txt/chinese/: kVariants.tsv
dictionaries/txt/thai/: words.txt
irg-kvariants/: Cargo.toml  README.md  build.rs
irg-kvariants/src/: lib.rs
kvariants/: Cargo.toml  README.md  build.rs
kvariants/src/: lib.rs
kvariants/src/kvariants/: mod.rs
src/: analyzer.rs  classifier.rs  detection.rs  lib.rs  token.rs  token_classifier.rs  tokenizer.rs
src/classifier/: classifier.rs  mod.rs
src/detection/: chars.rs  mod.rs  script_language.rs
src/internal_tokenizer/: jieba.rs  mod.rs  unicode_segmenter.rs
src/normalizer/: chinese.rs  compatibility_decomposition.rs  control_char.rs  control_character_remover.rs  deunicode.rs  deunicoder.rs  dummy_example.rs  hebrew.rs  identity.rs  japanese.rs  latin.rs  lowercase.rs  mod.rs  nonspacing_mark.rs  token_classifier.rs  zeroes_remover.rs
src/normalizer/chinese/: kvariants.rs
src/processors/: chinese_translation.rs  eraser.rs  identity.rs  mod.rs  replacer.rs
src/segmenter/: chinese.rs  dummy.example.rs  dummy_example.rs  hebrew.rs  japanese.rs  korean.rs  latin.rs  mod.rs  thai.rs  utils.rs
src/tokenizer/: jieba.rs  legacy_meilisearch.rs  lindera.rs  mod.rs  unicode_segmenter.rs
tests/: tests.rs  token_kind.rs
