[package]
name = "charabia"
version = "0.8.7"
license = "MIT"
authors = ["Many <many@meilisearch.com>"]
edition = "2021"
description = "A simple library to detect the language, tokenize the text and normalize the tokens"
documentation = "https://docs.rs/charabia"
repository = "https://github.com/meilisearch/charabia"
keywords = ["segmenter", "tokenizer", "normalize", "language"]
categories = ["text-processing"]
exclude = ["dictionaries/txt/thai/words.txt"]

[dependencies]
aho-corasick = "1.1.2"
cow-utils = "0.1"
csv = "1.3.0"
deunicode = "1.4.2"
either = "1.9.0"
finl_unicode = { version= "1.2.0", optional = true }
fst = "0.4"
jieba-rs = { version = "0.6", optional = true }
once_cell = "1.19.0"
serde = "1.0"
slice-group-by = "0.3.1"
whatlang = "0.16.4"
lindera-core = "=0.27.2"
lindera-dictionary = "=0.27.2"
lindera-tokenizer = { version = "=0.27.2", default-features = false, optional = true }
pinyin = { version = "0.10", default-features = false, features = [
  "with_tone",
], optional = true }
wana_kana = { version = "3.0.0", optional = true }
unicode-normalization = "0.1.22"
irg-kvariants = "0.1.0"
litemap = "0.7.2"
zerovec = "0.10.1"

[features]
default = ["chinese", "hebrew", "japanese", "thai", "korean", "greek", "latin-camelcase", "latin-snakecase", "khmer", "vietnamese"]

# allow chinese specialized tokenization
chinese = ["dep:pinyin", "dep:jieba-rs"]

# allow hebrew specialized tokenization
hebrew = []

# allow japanese specialized tokenization
japanese = ["japanese-segmentation-unidic"]
japanese-segmentation-ipadic = ["lindera-tokenizer/ipadic", "lindera-tokenizer/ipadic-compress"]
japanese-segmentation-unidic = ["lindera-tokenizer/unidic", "lindera-tokenizer/unidic-compress"]
japanese-transliteration = ["dep:wana_kana"]

# allow korean specialized tokenization
korean = ["lindera-tokenizer/ko-dic", "lindera-tokenizer/ko-dic-compress"]

# allow thai specialized tokenization
thai = []

# allow greek specialized tokenization
greek = []

# allow splitting camelCase latin words
latin-camelcase = ["dep:finl_unicode"]

khmer = []

# allow vietnamese specialized tokenization
vietnamese = []

# allow splitting snake_case latin words
latin-snakecase = ["dep:finl_unicode"]

[dev-dependencies]
criterion = "0.5"
jemallocator = "0.5.4"
quickcheck = "1"
quickcheck_macros = "1"


[[bench]]
name = "bench"
harness = false
