[package]
name = "irg-kvariants"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A simple wrapper around kvariant from hfhchan/irg"
repository = "https://github.com/meilisearch/charabia"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
once_cell = "1.19.0"
serde = { version = "1.0.203", features = ["derive"] }

[build-dependencies]
csv = "1.3.0"
serde = { version = "1.0.203", features = ["derive"] }
